<resources>
    <string name="app_name">project</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Учимся считать</string>
    <string name="second_fragment_label">Заработай целую пиццу!</string>
    <string name="next">Далее</string>
    <string name="two">Умножение/деление на 2</string>
    <string name="three">Умножение/деление на 3</string>
    <string name="four">Умножение/деление на 4</string>
    <string name="five">Умножение/деление на 5</string>
    <string name="six">Умножение/деление на 6</string>
    <string name="seven">Умножение/деление на 7</string>
    <string name="eignt">Умножение/деление на 8</string>
    <string name="nine">Умножение/деление на 9</string>
    <string name="eleven">Умножение/деление на 11</string>
    <string name="thirteen">Умножение/деление на 13</string>
    <string name="seventeen">Умножение/деление на 17</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Учимся считать</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>